# Diia

./: .gitignore  ACTUAL_DEMO_TRADING.md  API_DOCUMENTATION.md  ARCHITECTURE.md  BRIGHT_DATA_FINAL_STATUS.md  BRIGHT_DATA_IMPLEMENTATION_SUMMARY.md  BYBIT_HIGH_FREQUENCY_TRADER.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEMO_TRADING_VERIFICATION.md  DEPLOYMENT_GUIDE.md  DYNAMIC_CARDS_FIXED_COMPLETE.md  DYNAMIC_CARDS_ISSUE_RESOLVED.md  FINAL_IMPLEMENTATION_REPORT.md  HIGH_FREQUENCY_TRADING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_OPTIMIZATION_COMPLETE.md  OMNI-ALPHA_Comprehensive_Documentation.docx  OMNI-ALPHA_Documentation.docx  PRODUCTION_READINESS.md  PRODUCTION_READY_SYSTEM_REPORT.md  QUANTUM_ENHANCED_TRADING_SYSTEM.md  QUANTUM_ENHANCED_TRADING_SYSTEM_COMPLETE.md  QUICK_START.md  README.md  REAL_SYSTEM_STATUS_VERIFIED.md  USER_TRIGGERED_MCP_COMPLETE.md  analyze_losses.js  basic_trader.py  brightdata.txt  bybit_demo  bybit_demo.rs  bybitdemodocumentation.md  bybitdocumentations.md  check-positions.js  check_positions.py  check_real_trades.rs  check_wallet_balance.py  (+75 more)
agents/src/: ghost_trader.rs  macro_sentinel.rs  memory_node.rs
backend/config/: default.json
backend/src/: index.js
backend/src/routes/: geminiIntelligence.js  socialInsights.js
backend/src/services/: bybitService.js  geminiService.js  mcpOrchestrator.js
blockchain/src/: zk_soul_hash.rs
cli/src/: neural_shell.rs  shell_cli.rs
config/: default.toml  development.toml  production.toml  staging.toml
config/strategies/: advanced_multi_factor.toml
data/: README.md  market_data_schema.json
data/test/: .gitkeep
db/src/: redis_connector.rs  sqlite_memory.rs
docs/: OMNI-ALPHA_Ultimate_Whitepaper.docx  OMNI-ALPHA_Whitepaper.html  agent_network_visualization.py  agent_personalities.py  compile_latex.sh  convert_md_to_html.py  convert_md_to_pdf.py  create_whitepaper_pdf.py  generate_advanced_docs.py  generate_comprehensive_whitepaper.py  generate_pdfs.py  generate_professional_whitepaper.py  generate_whitepaper.py  mathematical_derivations.py  omni_ultimate_whitepaper.md  quantum_components_visualization.py  quantum_visualization.py  test_pdf.py  whitepaper_latex.tex  whitepaper_outline.md  zero_loss_visualization.py
engine/src/: agent_trait.rs  message_bus.rs  state_machine.rs
examples/: quantum_trading_demo.rs
ml_agents/: agent_configs.json
ml_agents/models/: .gitkeep
quantum/src/: agent_trait.rs  annealer.rs  hyperdimensional_computing.rs  message_bus.rs  mod.rs  quantum_entanglement.rs  quantum_predictor.rs  spectral_tree_engine.rs
scripts/: production_deploy.sh  setup_bybit_demo.sh  validate_demo_trading.sh
scripts/src/: run_live.rs  run_simulator.rs
src/: backtest.rs  bybit.rs  deployment.rs  enhanced_market_simulator.rs  lib.rs  main.rs  market_simulator.rs  neural_interface.rs  tests.rs  trading_system.rs  trading_system_test.rs
src/agents/: agent_coordinator.rs  anti_loss_hedger.rs  asset_scanner_agent.rs  compound_controller.rs  feedback_loop.rs  ghost_trader.rs  god_kernel.rs  high_frequency_trader.rs  hyperdimensional_pattern_recognizer.rs  main_strategy_controller.rs  market_analyzer.rs  memory_node.rs  mod.rs  quantum_predictor.rs  risk_manager.rs  sentiment_analyzer.rs  trade_executor.rs  zero_loss_enforcer.rs
src/backtest/: backtest_engine.rs  mod.rs
src/backtesting/: backtest_engine.rs  mod.rs
src/bybit/: client.rs  mod.rs  types.rs
src/capital/: enhanced_capital_test.rs  manager.rs  mod.rs  precise_capital_tracker.rs  precision_allocator.rs  validation_test.rs
src/data/: historical_data_loader.rs  mod.rs
src/deployment/: config_manager.rs  deployment_manager.rs  health_checker.rs  mod.rs  production_manager.rs
src/engine/: agent_trait.rs  entropy_calc.rs  execution_models.rs  inference_core.rs  message_bus.rs  mod.rs  state_machine.rs  temporal_memory.rs
src/exchange/: asset_discovery.rs  asset_scanner.rs  asset_scanner.rs.bak  mod.rs  position.rs  types.rs
src/exchange/bybit/: adapter.rs  adapter.rs.bak  comprehensive_asset_discovery.rs  demo_adapter.rs  (+4 more)
src/execution/: demo_trade_executor.rs  mod.rs
src/market_data/: mod.rs  real_time_feed.rs
src/monitoring/: alerting_system.rs  mod.rs  performance_monitor.rs  real_time_monitor.rs  unified_error_manager.rs
src/performance/: async_optimizer.rs  cache_manager.rs  connection_pool.rs  memory_manager.rs  mod.rs
src/position/: mod.rs  position_manager.rs
src/quantum/: hyperdimensional_computing.rs  mod.rs  quantum_entanglement.rs  quantum_predictor.rs  spectral_tree_engine.rs
src/strategy/: advanced_multi_factor_strategy.rs  advanced_strategy.rs  indicators.rs  mod.rs  simple_strategy.rs
src/tests/: integration_test.rs  mod.rs
src/ui/: dashboard.rs  mod.rs  neural_interface.rs  settings.rs  system_monitor.rs  trade_view.rs
standalone_bybit_test/: Cargo.toml  find_suitable_assets.rs  omni_alpha_complete_system.rs  omni_alpha_final_realistic_system.rs  omni_alpha_real_comprehensive_system.rs  omni_alpha_real_omni_system.rs  omni_alpha_realtime_market_scanner.rs  omni_alpha_super_advanced_system.rs  omni_alpha_true_analysis.rs  omni_alpha_true_integration.rs  omni_alpha_ultimate_profit_system.rs  position_monitor.rs  smart_allocation_system.rs  smart_trading_system.rs
standalone_bybit_test/src/: main.rs
standalone_quantum_trading_system/: Cargo.toml
standalone_quantum_trading_system/src/: main.rs
ui/: start-dashboard.sh
ui/dashboard/: README.md  ecosystem.config.js  package.json
ui/dashboard-backend/: README.md  comprehensive-system-repair-and-test.js  comprehensive-test-report.json  comprehensive-test-suite.js  comprehensive-test.sh  demo.env  ecosystem.config.js  emergency-close-positions.js  emergency-system-reset.js  nginx.conf  nuclear-phantom-trade-killer.js  package.json  real-comprehensive-500-test.js  real-comprehensive-test-report.json  reset-and-start-comprehensive.js  simplified-500-test.js  start.sh  test-asset-scanner.js  test-bybit-api.js  test-bybit-client.js  test-socketio.js  test-trading-strategy.js  test-websocket.js  ultra-fast-comprehensive-500-test.js
(+170 files in other folders)
