[package]
name = "omni"
version = "0.1.0"
edition = "2021"
description = "OMNI-ALPHA VΩ∞∞ Trading System"
authors = ["Sandeep Kumar Sahoo"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
rand = "0.8"
rand_distr = "0.4"
csv = "1.2"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
plotters = "0.3"
num = "0.4"
ndarray = "0.15"
ndarray-rand = "0.14"
nalgebra = "0.32"
rayon = "1.7"
hmac = "0.12"
sha2 = "0.10"
dotenv = "0.15"
serde_urlencoded = "0.7"
toml = "0.8"
sysinfo = "0.30"
hex = "0.4"
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
log = "0.4"
env_logger = "0.10"

[lib]
name = "omni"
path = "src/lib.rs"

[[bin]]
name = "omni"
path = "src/main.rs"

[[example]]
name = "quantum_trading_demo"
path = "examples/quantum_trading_demo.rs"

[[bin]]
name = "omni_alpha_executor"
path = "src/bin/omni_alpha_executor.rs"

[[bin]]
name = "quantum_enhanced_trading_system"
path = "src/bin/quantum_enhanced_trading_system.rs"

[[bin]]
name = "omni_alpha_bybit"
path = "src/bin/omni_alpha_bybit.rs"

[[bin]]
name = "omni_alpha"
path = "src/bin/omni_alpha.rs"

[[bin]]
name = "request_demo_funds"
path = "src/bin/request_demo_funds.rs"

[[bin]]
name = "check_account_info"
path = "src/bin/check_account_info.rs"

[[bin]]
name = "simulate_trading"
path = "src/bin/simulate_trading.rs"

[[bin]]
name = "omni_production"
path = "src/bin/omni_production.rs"

[[bin]]
name = "test_api_connection"
path = "src/bin/test_api_connection.rs"

[[bin]]
name = "simple_startup_test"
path = "src/bin/simple_startup_test.rs"

[[bin]]
name = "bybit_demo"
path = "src/bin/bybit_demo.rs"

[[bin]]
name = "bybit_high_frequency_trader"
path = "src/bin/bybit_high_frequency_trader.rs"

[[bin]]
name = "integration_test"
path = "src/bin/integration_test.rs"

[[bin]]
name = "demo_trading_system"
path = "src/bin/demo_trading_system.rs"

[[bin]]
name = "test_bybit_demo"
path = "src/bin/test_bybit_demo.rs"

[[bin]]
name = "simple_bybit_test"
path = "src/bin/simple_bybit_test.rs"

[[bin]]
name = "real_bybit_demo"
path = "src/bin/real_bybit_demo.rs"

[[bin]]
name = "minimal_bybit_test"
path = "src/bin/minimal_bybit_test.rs"

[[bin]]
name = "check_real_trades"
path = "check_real_trades.rs"

[[bin]]
name = "real_omni_trader"
path = "src/bin/real_omni_trader.rs"

[[bin]]
name = "test_phase2_capital_management"
path = "src/bin/test_phase2_capital_management.rs"
