[package]
name = "quantum-enhanced-trading-system"
version = "1.0.0"
edition = "2021"
authors = ["OMNI Team"]
description = "Quantum-Enhanced Trading System with Advanced Analysis"

[[bin]]
name = "quantum_trading"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
